unpackaged/main/default/objects/FS_Awards__c/FS_Awards__c.object-meta.xml
<CustomObject>
    <description>Custom object to track contact awards</description>
    <label>Awards</label>
    <nameField>
        <displayFormat>Award {000000}</displayFormat>
        <label>Award ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Awards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>