unpackaged/main/default/objects/FS_Awards__c/fields/FS_Award_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Award_Name__c</fullName>
    <inlineHelpText>Name of the Award</inlineHelpText>
    <label>Award Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>