unpackaged/main/default/objects/FS_Awards__c/fields/FS_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact tied to the Awards</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Awards</relationshipLabel>
    <relationshipName>Awards</relationshipName>
    <type>Lookup</type>
</CustomField>