unpackaged/main/default/objects/FS_Awards__c/fields/FS_Year_Awarded__c.field-meta.xml
<CustomField>
    <fullName>FS_Year_Awarded__c</fullName>
    <inlineHelpText>Year the contact was awarded</inlineHelpText>
    <label>Year Awarded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2013</fullName>
            </value>
            <value>
                <fullName>2012</fullName>
            </value>
            <value>
                <fullName>2011</fullName>
            </value>
            <value>
                <fullName>2010</fullName>
            </value>
            <value>
                <fullName>2009</fullName>
            </value>
            <value>
                <fullName>2008</fullName>
            </value>
            <value>
                <fullName>2007</fullName>
            </value>
            <value>
                <fullName>2006</fullName>
            </value>
            <value>
                <fullName>2005</fullName>
            </value>
            <value>
                <fullName>2004</fullName>
            </value>
            <value>
                <fullName>2003</fullName>
            </value>
            <value>
                <fullName>2002</fullName>
            </value>
            <value>
                <fullName>2001</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>1999</fullName>
            </value>
            <value>
                <fullName>1998</fullName>
            </value>
            <value>
                <fullName>1997</fullName>
            </value>
            <value>
                <fullName>1996</fullName>
            </value>
            <value>
                <fullName>1995</fullName>
            </value>
            <value>
                <fullName>1994</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>